Fix page height
Removed the "height: 100vh;" from the .main container and removed the
defined number of rows since it wasn't neccesary and was creating a lot of
white space at the bottom of the page.

--- a/style.css
+++ b/style.css
@@ -4,12 +4,12 @@
     margin: 0;
     border: 1px dashed red;
 }
-
+body{
+    min-height: 100vh;
+}
 .main{
     display: grid;
     grid-template-columns: 300px 1fr;
-    grid-template-rows: 1fr 5fr;
-    height: 100vh;
 }
 
 .sidebar{
